--- a/readme.adoc
+++ b/readme.adoc
@@ -3,6 +3,9 @@
 :pygments-style: monokai
 :toc: preamble
 
+image:https://goreportcard.com/badge/github.com/Foxcapades/Argonaut[link=https://goreportcard.com/report/github.com/Foxcapades/Argonaut]
+
+
 ++++
 <p align="center" role="Header">
   <img src="https://raw.githubusercontent.com/Foxcapades/Argonaut/master/meta/assets/argonaut.png"/>
