--- a/readme.adoc
+++ b/readme.adoc
@@ -18,7 +18,7 @@ A builder style CLI creation kit.
 
 WARNING: This project is currently pre-v1 and the API may
          not yet be stable.  Additionally, currently
-         existing features may not be behave as expected.
+         existing features may not behave as expected.
 
 //[source,go,linenums,tabsize=2]
 //----
