--- a/readme.adoc
+++ b/readme.adoc
@@ -7,7 +7,7 @@ image:https://img.shields.io/github/v/tag/Foxcapades/Argonaut?label=version[GitH
 image:https://goreportcard.com/badge/github.com/Foxcapades/Argonaut[link=https://goreportcard.com/report/github.com/Foxcapades/Argonaut]
 image:https://travis-ci.org/Foxcapades/Argonaut.svg?branch=master["Build Status", link="https://travis-ci.org/Foxcapades/Argonaut"]
 image:https://img.shields.io/codecov/c/github/Foxcapades/Argonaut[Codecov, link=https://codecov.io/gh/Foxcapades/Argonaut]
-
+image:https://img.shields.io/github/license/Foxcapades/Argonaut[GitHub]
 ++++
 <p align="center" role="Header">
   <img src="https://raw.githubusercontent.com/Foxcapades/Argonaut/master/meta/assets/argonaut.png"/>
