rendering fixes and unit tests

--- a/todo.adoc
+++ b/todo.adoc
@@ -39,3 +39,15 @@ there are no custom flag groups) or its own meta flag group.
 * [ ] Ensure there are no spaces in the subcommand names
 
 * [ ] Should a required argument with a default value be a warning?
+
+* [ ] Show unshadowed commands from the parent command node under a heading like
+      "Parent Flags" or "Inherited Flags" or "\{command} Flags" or something.
+      Probably put it below the command specific flags as they are of less
+      interest. +
+      But wait... if they are of less interest than the subcommands they should
+      appear after subcommands?  Are they of less interest than arguments?
+
+* [ ] Indicate when a flag is required somehow in the help text.
+
+* [ ] Indicate the difference between a leaf and a branch in the help docs
+      somehow, maybe trail branches with an ellipsis or something?
