--- a/readme.adoc
+++ b/readme.adoc
@@ -18,6 +18,9 @@ A builder style CLI creation kit.
 
 * Builder-style construction of singular commands or command trees.
 +
+.Example
+[%collapsible]
+====
 [source, go]
 ----
     com := cli.Command().
@@ -35,8 +38,12 @@ A builder style CLI creation kit.
             WithBinding(&conf.StringToBytes, true)).
         MustParse(os.Args)
 ----
+====
 * Automatic help text generation.
 +
+.Example
+[%collapsible]
+====
 [source]
 ----
 Usage:
@@ -53,9 +60,13 @@ Commands
   foo     Aliases: fo
       this is the description for the foo branch
 ----
+====
 * API that allows for unmarshalling of command line arguments into arbitrary
   types, including custom types using the `argo.Unmarshaler` interface.
 +
+.Example
+[%collapsible]
+====
 [source, go]
 ----
 type MyType struct {
@@ -83,6 +94,21 @@ func main() {
     fmt.Println(bar)
 }
 ----
+====
+* Default values for flags and arguments.
++
+.Example
+[%collapsible]
+====
+[source, go]
+----
+var arg int
+
+com := cli.Command().
+    WithArgument(cli.Argument().WithBinding(&arg).WithDefault(3)).
+    MustParse(os.Args)
+----
+====
 
 == Supported Types
 
@@ -177,9 +203,10 @@ These prefixes can be overridden or disabled entirely using the
 `argo.UnmarshalProps` type.
 
 ----
+077
 0o77
-o77
 0O77
+o77
 O77
 ----
 
