--- a/readme.adoc
+++ b/readme.adoc
@@ -126,7 +126,7 @@ In following tables, all entries in this table will be referenced by `<basic>`.
 | int    | int8   | int16  | int32  | int64
 | uint   | uint8  | uint16 | uint32 | uint64
 | string | bool   | (byte) | (rune) |
-| time.Duration | | | |
+| time.Duration | time.Time | | |
 |===
 
 Currently `complex64` and `complex128` are not supported.
