--- a/topics.adoc
+++ b/topics.adoc
@@ -5,9 +5,86 @@
 
 === Singular
 
-TODO
+Singular commands (buildable using `cli.Command()`) are non-nested commands that
+may accept flags and/or arguments.
+
+An example command construction for the CLI API for the command `cat` which has
+a slightly complicated API due to flags being shortcuts for other flag
+combinations.
+
+[source, go]
+----
+type Config struct {
+    NumberNonBlank bool
+    NumberLines bool
+    SqueezeBlank bool
+    ShowTabs bool
+    ShowEnds bool
+    ShowNonPrinting bool
+}
+
+func main() {
+    var config Config
+
+    cli.Command().
+        WithDescription("Concatenate FILE(s) to standard output.").
+        WithFlag(cli.ComboFlag('A', "show-all").
+            WithDescription("equivalent to -vET").
+            WithCallback(func(_ argo.Flag) {
+                config.ShowNonPrinting = true
+                config.ShowEnds = true
+                config.ShowTabs = true
+            })).
+        WithFlag(cli.ComboFlag('b', "number-nonblank").
+            WithDescription("number nonempty output lines, overrides -n").
+            WithBinding(&config.NumberNonBlank, false)).
+        WithFlag(cli.ShortFlag('e').
+            WithDescription("equivalent to -vE").
+            WithCallback(func(_ argo.Flag) {
+                config.ShowNonPrinting = true
+                config.ShowEnds = true
+            })).
+        WithFlag(cli.ComboFlag('E', "show-ends").
+            WithDescription("display $ at end of each line").
+            WithBinding(&config.ShowEnds, false)).
+        WithFlag(cli.ComboFlag('n', "number").
+            WithDescription("number all output lines").
+            WithBinding(&config.NumberLines, false)).
+        WithFlag(cli.ComboFlag('s', "squeeze-blank").
+            WithDescription("suppress repeated empty output lines").
+            WithBinding(&config.SqueezeBlank, false)).
+        WithFlag(cli.ShortFlag('t').
+            WithDescription("equivalent to -vT").
+            WithCallback(func(_ argo.Flag) {
+                config.ShowNonPrinting = true
+                config.ShowTabs = true
+            })).
+        WithFlag(cli.ComboFlag('T', "show-tabs").
+            WithDescription("display TAB characters as ^I").
+            WithBinding(&config.ShowTabs, false)).
+        WithFlag(cli.ComboFlag('v', "show-nonprinting").
+            WithDescription("use ^ and M- notation, except for LFD and TAB").
+            WithBinding(&config.ShowNonPrinting, false)).
+        WithFlag(cli.LongFlag("version").
+            WithDescription("output version information and exit").
+            WithCallback(func(_ argo.Flag) {
+                fmt.Println("<version information>")
+                os.Exit(0)
+            })).
+        WithUnmappedLabel("FILE...").
+        MustParse(os.Args)
+}
+----
 
 === Command Trees
+
+Command trees represent a tree of subcommands consisting of branches and leaves
+which allow the creation of multiple "separate" commands under a single root
+application.
+
+Examples of command tree style applications include `docker`, `kubectl`, and
+`go`, each of which require a subcommand to be used to perform a specific
+action.
 
 TODO
 
