--- a/topics.adoc
+++ b/topics.adoc
@@ -3,14 +3,15 @@
 
 == Commands
 
+[#singular-command]
 === Singular
 
 Singular commands (buildable using `cli.Command()`) are non-nested commands that
 may accept flags and/or arguments.
 
-An example command construction for the CLI API for the command `cat` which has
-a slightly complicated API due to flags being shortcuts for other flag
-combinations.
+The following is an example command construction of the CLI API for the command
+`cat` which has a slightly complicated API due to some flags being shortcuts for
+combinations of other flags.
 
 [source, go]
 ----
@@ -349,4 +350,48 @@ present in the CLI call.
 cli.Flag().Require()
 // Required Argument
 cli.Argument().Require()
+----
+
+== Help Text Generation
+
+Argonaut includes help text rendering with an overridable default implementation
+of an included `HelpRenderer` interface.
+
+Using the example construction of the `cat` CLI API from the
+<<#singular-command, Singular Command>> section, Argonaut generates the
+following text.
+
+[source, console]
+----
+$ cat2 -h
+Usage:
+  cat2 [options] [FILE...]
+
+    Concatenate FILE(s) to standard output.
+
+General Flags
+  -A | --show-all
+      equivalent to -vET
+  -b | --number-nonblank
+      number nonempty output lines, overrides -n
+  -e
+      equivalent to -vE
+  -E | --show-ends
+      display $ at end of each line
+  -n | --number
+      number all output lines
+  -s | --squeeze-blank
+      suppress repeated empty output lines
+  -t
+      equivalent to -vT
+  -T | --show-tabs
+      display TAB characters as ^I
+  -v | --show-nonprinting
+      use ^ and M- notation, except for LFD and TAB
+  --version
+      output version information and exit
+
+Help Flags
+  -h | --help
+      Prints this help text.
 ----
